Update for more log, update PaymentMethod